[workspace]
members = ["packages/rlm-anywhere"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/sakompella/nit-agent"

[workspace.dependencies]
# http
axum = { version = "0.8", features = ["json"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "stream",
    "json",
] }

# error handling
color-eyre = "0.6"

# parsing
const-str = "1"
figment = { version = "0.10", features = ["env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# code env
rquickjs = "0.11"

# cli
clap = { version = "4", features = ["derive", "env"] }

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
